--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 		<div class="square" id="sq6"></div>
 		<div class="square" id="sq7"></div>
 		<div class="square" id="sq8"></div>
-	</section>  
-	
+		
+		</section> 
+		<form  >
+	<button id="reset-button" type="reset">Reset</button>
+</form>
 </body>
 </html>
