--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		
 		</section> 
 		<form  >
-	<button id="reset-button" type="reset" hidden>Reset</button>
+	<button id="reset-button" type="reset">Reset</button>
 </form>
 </body>
 </html>
