--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link
+	rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+	/>
 	<link rel="stylesheet" href="./css/style.css">
 	<script defer src="./js/app.js"></script>
-	<title>Tic Tac Toe</title>
+	<title class= "animate__animated animate__tada">Tic Tac Toe</title>
 </head>
 <body>
-	<h1>Tic-Tac-Toe</h1>
+	<h1 >Tic-Tac-Toe</h1>
 	<h2 id="message">Message</h2>
 
 	<section class="board">
@@ -24,8 +29,8 @@
 		<div class="square" id="sq8"></div>
 		
 		</section> 
-		<form  >
-	<button id="reset-button" type="reset">Reset</button>
+		<form>
+	<button id="reset-button" type="reset"class="btn btn-danger">Reset</button>
 </form>
 </body>
 </html>
