--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 	/>
 	<link rel="stylesheet" href="./css/style.css">
+	<script defer src="./js/confetti.js"></script>
 	<script defer src="./js/app.js"></script>
 	<title class= "animate__animated animate__tada">Tic Tac Toe</title>
 </head>
